# CppUTest_Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  syscalls.c
.github/workflows/: pai-action.yml
ci-cd-tools/: Dockerfile
include/: FreeRTOSConfig.h  led.h  main.h  traffic_light.h
src/: average.cpp  led.cpp  main.cpp  traffic_light.cpp
tests/host/: CMakeLists.txt  syscalls.c
tests/host/average/: CMakeLists.txt  test.cpp
